--- a/react_test1.html
+++ b/react_test1.html
@@ -86,33 +86,40 @@
       )
     }
   });
-
-  var listElements = contacts
-    .filter(function(contact){return contact.email})
-    .map(function(contact){
-    return React.createElement(ContactItem,contact)
-  })
   
   var ContactForm = React.createClass({
     propTypes:{
-      contact:React.PropTypes.object.isRequired
+      contact:React.PropTypes.object.isRequired,
+      onChange:React.PropTypes.func.isRequired
     },
     render:function(){
+      var oldContact = this.props.contact
+      var onChange = this.props.onChange;      
+
       return(
         React.createElement('form',{className:'ContactForm'},
           React.createElement('input',{
             type:'text',
             placeholder:'Name (required)',
-            value: this.props.contact.name
+            value: this.props.contact.name,
+            onChange: function(e){
+              onChange(Object.assign({},oldContact,{name:e.target.value}))
+              }
           }),
           React.createElement('input',{
             type:'text',
             placeholder:'Email',
-            value: this.props.contact.email
+            value: this.props.contact.email,
+            onChange: function(e){
+              onChange(Object.assign({},oldContact,{email:e.target.value}))
+              }
           }),
           React.createElement('textarea',{
             placeholder:'Description',
-            value: this.props.contact.description
+            value: this.props.contact.description,
+            onChange: function(e){
+              onChange(Object.assign({},oldContact,{description:e.target.value}))
+              }
           }),
           React.createElement('button', {type:'submit'}, "Add Contact")
         )
@@ -123,14 +130,27 @@
   var ContactView = React.createClass({
     propTypes: {
       contacts: React.PropTypes.array.isRequired,
-      newContact: React.PropTypes.object.isRequired
+      newContact: React.PropTypes.object.isRequired,
+      onContactChange: React.PropTypes.func.isRequired
     },
     render:function(){
+      var oldContact = this.props.newContact
+      var onContactChange = this.props.onContactChange
+
+      var contactItemElements = this.props.contacts
+        .filter(function(contact){return contact.email})
+        .map(function(contact){
+        return React.createElement(ContactItem,contact)
+      })
+
       return (
         React.createElement('div',{className:'ContactView'},
           React.createElement('h1',{className:'ContactView-title'}, "Contacts"),
-          React.createElement('ul',{className:'ContactView-list'},listElements),
-          React.createElement(ContactForm,{contact: newContact})
+          React.createElement('ul',{className:'ContactView-list'},contactItemElements),
+          React.createElement(ContactForm,{
+            contact: this.props.newContact,
+            onChange: this.props.onContactChange
+          })
         ) 
       )
     }
@@ -139,7 +159,8 @@
   ReactDOM.render(
     React.createElement(ContactView,{
       contacts:contacts,
-      newContact:newContact
+      newContact:newContact,
+      onContactChange:function(newContact){ }
     }), 
     document.getElementById('react-app')
   )
