My form is now saving contacts! http://jamesknelson.com/learn-raw-react-ridiculously-simple-forms/

--- a/react_test1.html
+++ b/react_test1.html
@@ -62,14 +62,10 @@
   </body>
 </html>
 <script>
-  var contacts = [
-      {key: 1, name: "James K Nelson", email: "james@jamesknelson.com", description: "Front-end Unicorn"},
-      {key: 2, name: "Jim", email: "jim@example.com"},
-      {key: 3, name: "Joe"},
-  ]
+  /*
+   * Components
+   */
 
-  var newContact = {name:"",email:"",description:""}
-  
   var ContactItem = React.createClass({
     propTypes: {
       name: React.PropTypes.string.isRequired,
@@ -90,36 +86,42 @@
   var ContactForm = React.createClass({
     propTypes:{
       contact:React.PropTypes.object.isRequired,
-      onChange:React.PropTypes.func.isRequired
+      onChange:React.PropTypes.func.isRequired,
+      submitNewContact:React.PropTypes.func.isRequired
     },
+
+    onNameInput: function(e){
+      this.props.onChange(Object.assign({},this.props.contact, {name: e.target.value}))
+    },
+
+    onEmailInput: function(e){
+      this.props.onChange(Object.assign({},this.props.contact, {email: e.target.value}))
+    },
+
+    onDescriptionInput: function(e){
+      this.props.onChange(Object.assign({},this.props.contact, {description: e.target.value}))
+    },
+
     render:function(){
-      var oldContact = this.props.contact
-      var onChange = this.props.onChange;      
 
       return(
-        React.createElement('form',{className:'ContactForm'},
+        React.createElement('form',{className:'ContactForm', onSubmit: this.props.submitNewContact},
           React.createElement('input',{
             type:'text',
             placeholder:'Name (required)',
             value: this.props.contact.name,
-            onChange: function(e){
-              onChange(Object.assign({},oldContact,{name:e.target.value}))
-              }
+            onInput: this.onNameInput
           }),
           React.createElement('input',{
             type:'text',
             placeholder:'Email',
             value: this.props.contact.email,
-            onChange: function(e){
-              onChange(Object.assign({},oldContact,{email:e.target.value}))
-              }
+            onInput: this.onEmailInput
           }),
           React.createElement('textarea',{
             placeholder:'Description',
             value: this.props.contact.description,
-            onChange: function(e){
-              onChange(Object.assign({},oldContact,{description:e.target.value}))
-              }
+            onInput: this.onDescriptionInput
           }),
           React.createElement('button', {type:'submit'}, "Add Contact")
         )
@@ -131,7 +133,8 @@
     propTypes: {
       contacts: React.PropTypes.array.isRequired,
       newContact: React.PropTypes.object.isRequired,
-      onContactChange: React.PropTypes.func.isRequired
+      onContactChange: React.PropTypes.func.isRequired,
+      submitNewContact: React.PropTypes.func.isRequired
     },
     render:function(){
       var oldContact = this.props.newContact
@@ -149,19 +152,60 @@
           React.createElement('ul',{className:'ContactView-list'},contactItemElements),
           React.createElement(ContactForm,{
             contact: this.props.newContact,
-            onChange: this.props.onContactChange
+            onChange: this.props.onContactChange,
+            submitNewContact: this.props.submitNewContact
           })
         ) 
       )
     }
   });
 
-  ReactDOM.render(
-    React.createElement(ContactView,{
-      contacts:contacts,
-      newContact:newContact,
-      onContactChange:function(newContact){ }
-    }), 
-    document.getElementById('react-app')
-  )
+  /*
+   * Actions
+   */
+
+  function updateNewContact(contact) {
+    setState({newContact:contact}); 
+    console.log(contact)
+  }
+
+  function submitNewContact(e){
+    e.preventDefault()
+    Object.assign(this.state.newContact, {key: this.state.contacts[this.state.contacts.length-1].key + 1})
+    console.log(this.state.contacts[this.state.contacts.length-1].key + 1)
+    this.setState({
+      contacts: this.state.contacts.concat([this.state.newContact]) 
+    });
+    console.log("New contacts:", this.state.contacts)
+  }
+
+  /*
+   * Model
+   */
+
+  var state = {};
+
+  //Make the given changes to the state and perform any required housekeeping
+  function setState(changes){
+    Object.assign(state,changes);
+ 
+    ReactDOM.render(
+      React.createElement(ContactView, Object.assign({},state, {
+        onContactChange: updateNewContact,
+        submitNewContact: submitNewContact
+      })),
+      document.getElementById('react-app')
+    )
+  }
+
+  //Set initial data
+  setState({
+    contacts: [
+      {key: 1, name: "James K Nelson", email: "james@jamesknelson.com", description: "Front-end Unicorn"},
+      {key: 2, name: "Jim", email: "jim@example.com"},
+      {key: 3, name: "Joe"}
+    ],
+    newContact: {name:"", email:"", description: ""}
+  });
+
 </script>
